--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <!-- <link
+  <link
       rel="icon"
       type="image/svg+xml"
-      href="/vite.svg"
-  /> -->
+      href="/favicon.svg"
+  />
   <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
