--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       type="image/svg+xml"
       href="/favicon.svg"
   />
+  <link
+      rel="manifest"
+      href="/manifest.json"
+  />
   <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
